--- a/var/Application/Service/SendMail/Exceptions/MalformedAddressException.php.html
+++ b/var/Application/Service/SendMail/Exceptions/MalformedAddressException.php.html
@@ -2,12 +2,12 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for /home/dev/work/emailsender/src/Application/Service/SendMail/ResponseInterface.php</title>
+  <title>Code Coverage for /home/dev/work/emailsender/src/Application/Service/SendMail/Exceptions/MalformedAddressException.php</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../../../_css/bootstrap.min.css?v=11.0.3" rel="stylesheet" type="text/css">
-  <link href="../../../_css/octicons.css?v=11.0.3" rel="stylesheet" type="text/css">
-  <link href="../../../_css/style.css?v=11.0.3" rel="stylesheet" type="text/css">
-  <link href="../../../_css/custom.css" rel="stylesheet" type="text/css">
+  <link href="../../../../_css/bootstrap.min.css?v=11.0.3" rel="stylesheet" type="text/css">
+  <link href="../../../../_css/octicons.css?v=11.0.3" rel="stylesheet" type="text/css">
+  <link href="../../../../_css/style.css?v=11.0.3" rel="stylesheet" type="text/css">
+  <link href="../../../../_css/custom.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <header>
@@ -16,11 +16,12 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="../../../index.html">/home/dev/work/emailsender/src</a></li>
-         <li class="breadcrumb-item"><a href="../../index.html">Application</a></li>
-         <li class="breadcrumb-item"><a href="../index.html">Service</a></li>
-         <li class="breadcrumb-item"><a href="index.html">SendMail</a></li>
-         <li class="breadcrumb-item active">ResponseInterface.php</li>
+         <li class="breadcrumb-item"><a href="../../../../index.html">/home/dev/work/emailsender/src</a></li>
+         <li class="breadcrumb-item"><a href="../../../index.html">Application</a></li>
+         <li class="breadcrumb-item"><a href="../../index.html">Service</a></li>
+         <li class="breadcrumb-item"><a href="../index.html">SendMail</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Exceptions</a></li>
+         <li class="breadcrumb-item active">MalformedAddressException.php</li>
 
        </ol>
       </nav>
@@ -58,6 +59,20 @@
        <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
       </tr>
 
+      <tr>
+       <td class=""><abbr title="EmailSender\Application\Service\SendMail\Exceptions\MalformedAddressException">MalformedAddressException</abbr></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+       <td class=" small">0</td>
+       <td class=" big"></td>
+       <td class=" small"><div align="right">n/a</div></td>
+       <td class=" small"><div align="right">0&nbsp;/&nbsp;0</div></td>
+      </tr>
+
 
      </tbody>
     </table>
@@ -66,9 +81,9 @@
 <tbody>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="1" href="#1">1</a></td><td class="col-11 codeLine"><span class="default">&lt;?php</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="2" href="#2">2</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="3" href="#3">3</a></td><td class="col-11 codeLine"><span class="keyword">namespace</span><span class="default">&nbsp;</span><span class="default">EmailSender\Application\Service\SendMail</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="3" href="#3">3</a></td><td class="col-11 codeLine"><span class="keyword">namespace</span><span class="default">&nbsp;</span><span class="default">EmailSender\Application\Service\SendMail\Exceptions</span><span class="keyword">;</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="4" href="#4">4</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">interface</span><span class="default">&nbsp;</span><span class="default">ResponseInterface</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">class</span><span class="default">&nbsp;</span><span class="default">MalformedAddressException</span><span class="default">&nbsp;</span><span class="keyword">extends</span><span class="default">&nbsp;</span><span class="default">\Exception</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="6" href="#6">6</a></td><td class="col-11 codeLine"><span class="keyword">{</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="7" href="#7">7</a></td><td class="col-11 codeLine"><span class="keyword">}</span></td></tr>
 
@@ -88,9 +103,9 @@
     </a>
    </footer>
   </div>
-  <script src="../../../_js/jquery.min.js?v=11.0.3" type="text/javascript"></script>
-  <script src="../../../_js/popper.min.js?v=11.0.3" type="text/javascript"></script>
-  <script src="../../../_js/bootstrap.min.js?v=11.0.3" type="text/javascript"></script>
-  <script src="../../../_js/file.js?v=11.0.3" type="text/javascript"></script>
+  <script src="../../../../_js/jquery.min.js?v=11.0.3" type="text/javascript"></script>
+  <script src="../../../../_js/popper.min.js?v=11.0.3" type="text/javascript"></script>
+  <script src="../../../../_js/bootstrap.min.js?v=11.0.3" type="text/javascript"></script>
+  <script src="../../../../_js/file.js?v=11.0.3" type="text/javascript"></script>
  </body>
 </html>
