--- a/var/Domain/Recipient.php.html
+++ b/var/Domain/Recipient.php.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for /home/dev/work/emailsender/src/Domain/Sender.php</title>
+  <title>Code Coverage for /home/dev/work/emailsender/src/Domain/Recipient.php</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css?v=11.0.3" rel="stylesheet" type="text/css">
   <link href="../_css/octicons.css?v=11.0.3" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">/home/dev/work/emailsender/src</a></li>
          <li class="breadcrumb-item"><a href="index.html">Domain</a></li>
-         <li class="breadcrumb-item active">Sender.php</li>
+         <li class="breadcrumb-item active">Recipient.php</li>
 
        </ol>
       </nav>
@@ -72,7 +72,7 @@
       </tr>
 
       <tr>
-       <td class="success"><abbr title="EmailSender\Domain\Sender">Sender</abbr></td>
+       <td class="success"><abbr title="EmailSender\Domain\Recipient">Recipient</abbr></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -101,7 +101,7 @@
       </tr>
 
       <tr>
-       <td class="success">&nbsp;<a href="#10"><abbr title="__construct(EmailSender\Domain\Contact $sender)">__construct</abbr></a></td>
+       <td class="success">&nbsp;<a href="#10"><abbr title="__construct(array $recipient)">__construct</abbr></a></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -123,7 +123,7 @@
       </tr>
 
       <tr>
-       <td class="success">&nbsp;<a href="#17"><abbr title="getSenderName(): string">getSenderName</abbr></a></td>
+       <td class="success">&nbsp;<a href="#14"><abbr title="getRecipientName(int $rang): string">getRecipientName</abbr></a></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -145,7 +145,7 @@
       </tr>
 
       <tr>
-       <td class="success">&nbsp;<a href="#25"><abbr title="getSenderAddress(): string">getSenderAddress</abbr></a></td>
+       <td class="success">&nbsp;<a href="#19"><abbr title="getRecipientAddress(int $rang): string">getRecipientAddress</abbr></a></td>
        <td class="success big">       <div class="progress">
          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
            <span class="sr-only">100.00% covered (success)</span>
@@ -176,31 +176,25 @@
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="2" href="#2">2</a></td><td class="col-11 codeLine"></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="3" href="#3">3</a></td><td class="col-11 codeLine"><span class="keyword">namespace</span><span class="default">&nbsp;</span><span class="default">EmailSender\Domain</span><span class="keyword">;</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="4" href="#4">4</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">class</span><span class="default">&nbsp;</span><span class="default">Sender</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="5" href="#5">5</a></td><td class="col-11 codeLine"><span class="keyword">class</span><span class="default">&nbsp;</span><span class="default">Recipient</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="6" href="#6">6</a></td><td class="col-11 codeLine"><span class="keyword">{</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="7" href="#7">7</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="comment">/**</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="8" href="#8">8</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*&nbsp;@param&nbsp;Contact&nbsp;$sender</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="8" href="#8">8</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*&nbsp;@param&nbsp;array&lt;int,&nbsp;Contact&gt;&nbsp;$recipient</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="9" href="#9">9</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*/</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="10" href="#10">10</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">__construct</span><span class="keyword">(</span><span class="keyword">private</span><span class="default">&nbsp;</span><span class="default">Contact</span><span class="default">&nbsp;</span><span class="default">$sender</span><span class="keyword">)</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="10" href="#10">10</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">__construct</span><span class="keyword">(</span><span class="keyword">private</span><span class="default">&nbsp;</span><span class="keyword">array</span><span class="default">&nbsp;</span><span class="default">$recipient</span><span class="keyword">)</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="11" href="#11">11</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">{</span></td></tr>
-    <tr class="covered-by-large-tests popin d-flex"><td  data-title="6 tests cover line 12" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailAuthFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\SenderTest::testSender&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="12" href="#12">12</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
+    <tr class="covered-by-large-tests popin d-flex"><td  data-title="6 tests cover line 12" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailAuthFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\RecipientTest::testRecipient&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="12" href="#12">12</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
     <tr class=" d-flex"><td  class="col-1 text-right"><a id="13" href="#13">13</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="14" href="#14">14</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="comment">/**</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="15" href="#15">15</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*&nbsp;@return&nbsp;string&nbsp;$sender</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="16" href="#16">16</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*/</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="17" href="#17">17</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">getSenderName</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="default">string</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="18" href="#18">18</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">{</span></td></tr>
-    <tr class="covered-by-large-tests popin d-flex"><td  data-title="5 tests cover line 19" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\SenderTest::testSender&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="19" href="#19">19</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$this</span><span class="default">-&gt;</span><span class="default">sender</span><span class="default">-&gt;</span><span class="default">getContactName</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="20" href="#20">20</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="21" href="#21">21</a></td><td class="col-11 codeLine"></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="22" href="#22">22</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="comment">/**</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="23" href="#23">23</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*&nbsp;@return&nbsp;string&nbsp;$sender</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="24" href="#24">24</a></td><td class="col-11 codeLine"><span class="comment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*/</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="25" href="#25">25</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">getSenderAddress</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="default">string</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="26" href="#26">26</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">{</span></td></tr>
-    <tr class="covered-by-large-tests popin d-flex"><td  data-title="5 tests cover line 27" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\SenderTest::testSender&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="27" href="#27">27</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$this</span><span class="default">-&gt;</span><span class="default">sender</span><span class="default">-&gt;</span><span class="default">getContactAddress</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="28" href="#28">28</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
-    <tr class=" d-flex"><td  class="col-1 text-right"><a id="29" href="#29">29</a></td><td class="col-11 codeLine"><span class="keyword">}</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="14" href="#14">14</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">getRecipientName</span><span class="keyword">(</span><span class="default">int</span><span class="default">&nbsp;</span><span class="default">$rang</span><span class="keyword">)</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="default">string</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="15" href="#15">15</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">{</span></td></tr>
+    <tr class="covered-by-large-tests popin d-flex"><td  data-title="5 tests cover line 16" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\RecipientTest::testRecipient&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="16" href="#16">16</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$this</span><span class="default">-&gt;</span><span class="default">recipient</span><span class="keyword">[</span><span class="default">$rang</span><span class="keyword">]</span><span class="default">-&gt;</span><span class="default">getContactName</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="17" href="#17">17</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="18" href="#18">18</a></td><td class="col-11 codeLine"></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="19" href="#19">19</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">public</span><span class="default">&nbsp;</span><span class="keyword">function</span><span class="default">&nbsp;</span><span class="default">getRecipientAddress</span><span class="keyword">(</span><span class="default">int</span><span class="default">&nbsp;</span><span class="default">$rang</span><span class="keyword">)</span><span class="keyword">:</span><span class="default">&nbsp;</span><span class="default">string</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="20" href="#20">20</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">{</span></td></tr>
+    <tr class="covered-by-large-tests popin d-flex"><td  data-title="5 tests cover line 21" data-content="&lt;ul&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSuccess&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testSendTransactionalEmailSendingFailure&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\EmailSenderTest::testContentSmtpMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\MailTest::testMail&lt;/li&gt;&lt;li class=&quot;covered-by-large-tests&quot;&gt;EmailSender\Tests\Domain\RecipientTest::testRecipient&lt;/li&gt;&lt;/ul&gt;" data-placement="top" data-html="true" class="col-1 text-right"><a id="21" href="#21">21</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">return</span><span class="default">&nbsp;</span><span class="default">$this</span><span class="default">-&gt;</span><span class="default">recipient</span><span class="keyword">[</span><span class="default">$rang</span><span class="keyword">]</span><span class="default">-&gt;</span><span class="default">getContactAddress</span><span class="keyword">(</span><span class="keyword">)</span><span class="keyword">;</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="22" href="#22">22</a></td><td class="col-11 codeLine"><span class="default">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="keyword">}</span></td></tr>
+    <tr class=" d-flex"><td  class="col-1 text-right"><a id="23" href="#23">23</a></td><td class="col-11 codeLine"><span class="keyword">}</span></td></tr>
 
 </tbody>
 </table>
